<resources>
    <string name="app_name">Foreign Card</string>
    <string name="cancel">Отмена</string>
    <string name="new_package_name">Имя набора карт</string>
    <string name="new_card_set_language">Первый язык набора</string>
    <string name="second_card_set_language">Второй язык набора</string>
    <string name="card_set_error_dialog">Произошла ошибка!</string>
    <string name="yes">Да</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_card">Add new card</string>
    <string name="hint_front_word">Слово с передней стороны</string>
    <string name="hint_back_word">Слово с задней стороны</string>
    <string name="check_knowledge">Проверить знания</string>
    <string name="title_package_text">Название набора: %s</string>
    <string name="word_pair_hint">Смахните влево, если вы не выучили слово, или вправо, если слово выучено. Чтобы посмотреть перевод, просто кликните на карточку</string>
    <string name="circle_view_fine">Отлично!</string>
    <string name="circle_view_good">Хорошо!</string>
    <string name="circle_view_acceptable">Удовлетворительно</string>
    <string name="circle_view_bad">Плохо</string>
    <string name="result_title">Результаты теста</string>
    <string name="legend_wrong">Не выучено слов</string>
    <string name="legend_right">Выучено слов</string>
    <string name="no_answer_legend">Нет статистики</string>
    <string name="finish_test_button">Закончить тестирование</string>
    <string name="channel_name">Напоминания</string>
    <string name="channel_description">Напомним вам, чтобы вы повторили слова и их перевод</string>
    <string name="error_message">Произошла ошибка при загрузке данных</string>
    <string name="search_hint">Поиск набора</string>
    <string name="error_message_insert">Невозможно сохранить набор!</string>
    <string name="menu_list">Наборы</string>
    <string name="menu_settings">Настройки</string>
    <string name="dark_theme_setting_string">Включить темную тему</string>
    <string name="first_language">Первый язык: %s</string>
    <string name="second_language">Второй язык: %s</string>
    <string name="reverse_package">Развернуть набор</string>
</resources>