<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.myapplication.presentaion.view.StatisticCircleView
        android:id="@+id/circle_statistic_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toRightOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:rightColor="@android:color/holo_green_light"
        app:wrongColor="@android:color/holo_red_light"
        tools:notAnswer="5"
        tools:right="90"
        android:textSize = "30sp"
        tools:wrong="5" />

    <TextView
        android:id="@+id/legend_wrong_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/legend_wrong"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_baseline_crop_square_24"
        app:drawableTint="@android:color/holo_red_dark"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/circle_statistic_view" />

    <TextView
        android:id="@+id/legend_right_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/legend_right"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_baseline_crop_square_24"
        app:drawableTint="@android:color/holo_green_dark"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/legend_wrong_view" />

    <TextView
        android:id="@+id/legend_not_answer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/no_answer_legend"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_baseline_crop_square_24"
        app:drawableTint="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/legend_right_view" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/finish_test_button"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toRightOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/legend_not_answer_view" />
</androidx.constraintlayout.widget.ConstraintLayout>